Fixat Chart Design och börjar på Methods

--- a/Project/Report/TODO.txt
+++ b/Project/Report/TODO.txt
@@ -38,7 +38,9 @@
 
 
 
-Se till att AXANIVIS charts förklaras där det först nämns
+Se till att AXANIVIS charts förklaras där det först nämns KLART!
+
+Se till att Söderbergs namn skrivs likadant överallt.
 
 
 
