--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -84,7 +84,7 @@ These numbers have been calculated from a set of standardized conditions~\cite{B
 
 These conditions cannot always be met. Examination rooms are not always large enough to take measurements from six meters away for example. In those cases, the reference numbers on the sheet are no longer accurate and the optician has to compensate manually~\cite{PGSoderberg}. If the standardized conditions cannot be met it can lead to irregularities or faulty measurements in some tests.
 
-There are also several different variations on these eye charts. Different sets of optotypes, ranging from different subsets of Latin letters to more abstract symbols, have been developed for different types of patients, such as those who are analphabetic, or for small children. The layout of these charts also have variations, from the classic Snellen chart~(fig.~\ref{fig:snellen_chart1}) that was developed in the 19th century, to the more modern ETDRS chart~(fig.~\ref{fig:etdrs_chart1}).
+There are also several different variations on these eye charts. Different sets of optotypes, ranging from different subsets of Latin letters to more abstract symbols, have been developed for different types of patients, such as those who are analphabetic, or for small children. The layout of these charts also have variations, from the classic Snellen chart~(fig.~\ref{fig:snellen_chart1}) that was developed in the 19th century, to the more modern ETDRS (Early Treatment Diabetic Retinopathy Study) chart~(fig.~\ref{fig:etdrs_chart1}).
 
 
 In a field so dependent on visual aids and equipment, it's easy to see that there are several possibilities for improvement and expansion. Modern technology can be used to improve these tests, and digitalization can simplify the way opticians work with diagrams.
@@ -312,7 +312,7 @@ The magnification is a problem is visual acuity testing because if the optotypes
 There is need to have a standard to follow on how much addition or subtraction needed for a specific distance. Figure \ref{magtable} shows what values to use when testing visual acuity at shorter distances than six meters. \cite{PGSoderberg}
 
 \section{Chart Design}
-The visual acuity charts used in this project are based on ETDRS (Early Treatment Diabetic Retinopathy Study) charts (fig. \ref{fig:etdrs_chart1}, page \pageref{fig:etdrs_chart1}) \cite{Ferris} and a project developed by P.G. Söderberg \cite{PGSoderbergOral} at Uppsala University Hospital. 
+The visual acuity charts used in this project are based on the ETDRS (fig. \ref{fig:etdrs_chart1}, page \pageref{fig:etdrs_chart1}) \cite{Ferris} and the Axanivis (fig. \ref{fig:axanivis}) \cite{PGSoderbergOral} charts developed by P.G. Söderberg at Uppsala University Hospital. 
 
 %\begin{figure}[ht!]
 %\centering
@@ -325,7 +325,7 @@ An optotype is a symbol that is used on a visual acuity chart. The optotypes are
 
 \textit{Sloan letters} are defined to be the ten optotypes \textit{C, D, H, K, N, O, R, S, V and Z}. They have been chosen because they are easily differentiated from each other \cite{Ferris} and are used by most visual acuity charts\cite{Colenbrander}.
 
-\textit{Landholt C} is a sloan \textit{C} that is rotated by 0, 90, 180 or 270 degrees and is usually used in a more scientific environment. The Landholt C is used as reference when deciding the how difficult it is to read a specific optotype\cite{Colenbrander}.
+\textit{Landholt C} is a sloan \textit{C} that is rotated by 0, 90, 180 or 270 degrees and is usually used in a scientific environment. The Landholt C is used as reference when deciding the how difficult it is to read a specific optotype\cite{Colenbrander}.
 
 \textit{Tumbling E} is like the Landholt C, but with the optotype \textit{E} instead of \textit{C}. This optotype can be used instead of the Sloan collection of optotypes if the patient doesn't know how to read. The patient can instead show or tell the optician in what direction the \textit{E} is rotated\cite{Colenbrander}.
 
@@ -407,24 +407,25 @@ The optotypes on the top row of the chart is of the size 1.0 LogMAR and then eac
 
 %\newpage
 \subsection{Axanivis Charts}
-The Axanivis charts are an extension to the ETDRS chart that adds two new chart layouts and digitalizes them so they can be displayed on a screen. Since the original ETDRS chart is made for a physical chart, it doesn't have an aspect ratio \cite{Ferris} that is close to a common monitor. To solve this, the original chart is split into an upper (fig. \ref{fig:etdrs_upper}) and a lower chart (fig. \ref{fig:etdrs_lower}). The upper chart display the five first rows and the lower chart display the remaining nine.
+The Axanivis charts are an extension to the ETDRS chart that modifies the original chart and adds two new chart layouts and digitalizes them so they can be displayed on a screen. Since the original ETDRS chart is made for a physical chart, it doesn't have an aspect ratio \cite{Ferris} that is close to a common monitor. To solve this, the original chart is split into an upper (fig. \ref{fig:etdrs_upper}) and a lower chart (fig. \ref{fig:etdrs_lower}). The upper chart consists of the five first rows and the lower chart consists of the the remaining nine.
 
 \begin{figure}[ht!]
 \centering
-\begin{subfigure}{.5\textwidth}
+\begin{subfigure}{.8\textwidth}
   \centering
   %\includegraphics[width=.5\linewidth]{images/etdrs_top.png}
-  \includegraphics[width=50mm]{images/etdrs_top.png}
+  \includegraphics[width=100mm]{images/etdrs_top.png}
   \caption{Upper Chart}
   \label{fig:etdrs_upper}
 \end{subfigure}%
-\begin{subfigure}{.5\textwidth}
+
+\begin{subfigure}{.8\textwidth}
   \centering
-  \includegraphics[width=50mm]{images/etdrs_bottom.png}
+  \includegraphics[width=100mm]{images/etdrs_bottom.png}
   \caption{Lower Chart}
   \label{fig:etdrs_lower}
 \end{subfigure}
-\caption{The upper and lower ETDRS charts}
+\caption{The upper and lower ETDRS charts (Source: P.G. Söderberg)}
 \label{fig:etdrs_upper_lower}
 \end{figure}
 
@@ -433,24 +434,24 @@ The two new chart layouts used is constructed using the same principles, like he
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=100mm]{images/etdrs_one_line.png}
-\caption{The one line chart}
+\caption{The one line chart (Source: P.G. Söderberg)}
 \label{fig:etdrs_one_line}
 \end{figure}
 
 \pagebreak
-Once an estimated visual acuity have been achieved from the one line chart, the user can select an optotype and display the second new layout, which only display one optotype at a time (fig. \ref{fig:etdrs_single}). This layout removes all clutter and allow the patient to easily focus on only a single optotype at a time. The user can then page between the different optotype sizes in order to determine the visual acuity.
+Once an estimated visual acuity has been achieved from the one line chart, the user can select an optotype and show the second new layout, which will only display one optotype at a time (fig. \ref{fig:etdrs_single}). This layout allows the patient to easily focus on a single optotype at a time. The user can then page between the different optotype sizes in order to determine the visual acuity.
 
 \begin{figure}[ht!  ]
 \centering
 \includegraphics[width=90mm]{images/etdrs_single.png}
-\caption{The single optotype chart}
+\caption{The single optotype chart where the red circle indicates the area the patient should focus on.}
 \label{fig:etdrs_single}
 \end{figure}
 
 \chapter{ Implementation}
 \section{Methods}
 \subsection{System structure}
-The system is divided into three major parts, an Android application, a server and networking. The Android application and server is modeled after the MVC (Model-View-Controller) pattern, where the model is the logic and the view is the GUI (Graphical User Interface). The controller part is the part on the Android application that listens for button clicks and gestures. Usually the networking would fall under controller in the MVC pattern but was, in this system, chosen to be a separate larger structure. Figure \ref{system_structure} shows how the different parts are connected.
+The system is divided into three major parts, an Android application, a server and networking. The Android application and server is modeled after the MVC (Model-View-Controller) pattern, where the model is the logic, such as calculating the sizes of the optotypes and randomizing the order which they appear, and the view is the GUI (Graphical User Interface). The controller part is the part on the Android application that listens for button clicks and gestures. Usually the networking would fall under controller in the MVC pattern but was, in this system, chosen to be a separate larger structure. The reason the network part is separated from the controller is because it is large part of the system and it separates the project into three parts. This allows each project member to focus on a single part. Figure \ref{system_structure} shows how the different parts are connected.
 
 \begin{figure}[ht!]
 \centering
