fixed things on Android Application

--- a/Project/Report/references.bib
+++ b/Project/Report/references.bib
@@ -132,6 +132,14 @@ year = {2015}
  note 	= {visited on 2015-08-27}
 }
 
+@online{android_gui,
+	author= {{Google, Inc}},
+	title = {User Interface},
+  	year = 2015,
+  	url = {http://developer.android.com/guide/topics/ui/index.html},
+  	note = {visited on 2015-05-19}
+}
+
 
 
 
