fixed some stuff

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -580,7 +580,7 @@ DISTANCE
 The system fulfills all specified requirements and allow the user to quickly set up a chart on the monitor. No system crashes have occurred during testing, and no bugs that causes the system to not work properly have been encountered. With a stable WiFi connection, the system runs smoothly without any lag and the server detection finds a server in under a second. 
 
 \subsection{Android application}
-The Android application uses Android's standard GUI elements. To navigate between the connection settings and different type of charts, Android's built in navigation drawer is used (fig. \ref{fig:app_nav_drawer}). In order to reach the connection settings, the user must click the name of the connected server, in the case that no server is connected, it will, instead of the name of a server, say \textit{Click to connect}.
+The Android application uses Android's standard GUI elements. To navigate between the connection settings and different type of charts, Android's built in navigation drawer is used (fig. \ref{fig:app_nav_drawer}). In order to reach the connection settings, the user must click the name of the connected server and in the case that no server is connected, it will, instead of the name of a server, say \textit{Click to connect}.
 
 \begin{figure}[ht!]
 \centering
@@ -589,7 +589,7 @@ The Android application uses Android's standard GUI elements. To navigate betwee
 \label{fig:app_nav_drawer}
 \end{figure}
 
-Once the connection settings page have been reached, the user will be shown the connection status and a \textit{scan network} button (fig. \ref{fig:scan1}) which can be used to scan the network for servers. Once the button is pressed, the button will be disabled and found servers will appear in a list below (fig. \ref{fig:scan2}). When the desired server have been found, the user can click on it to connect to it and once the entire scan is complete, the \textit{scan network} button will be enabled again.
+Once the connection settings page have been reached, the user will be shown the connection status and a \textit{scan network} button (fig. \ref{fig:scan1}) which can be used to scan the network for servers. Once the button is pressed, the button will be disabled and found servers will appear in a list below (fig. \ref{fig:scan2}). When the desired server has been found, the user can click on it to connect to it and once the entire scan is complete, the \textit{scan network} button will be enabled again.
 
 \begin{figure}[ht!]
 \centering
@@ -625,7 +625,7 @@ Once the application has connected to a server, the user can navigate to the cha
 \label{fig:etdrs_large}
 \end{figure}
 
-The user can now choose which chart version, size and distance to use. The chart version decides which optotype to use at which position. The ETDRS chart have 3 pre-made versions\cite{Ferris} and the rest of the charts have 1. There is also an option to use a randomly generated version which is generated when the application start. If this option is selected, the generate button below enables, so that the user can generate a new version if necessary. The random version is generated with no restrictions and should be used with caution.
+The user can now choose which chart version, size and distance to use. The chart version decides which optotype to use at which position. The ETDRS chart has 3 pre-made versions\cite{Ferris} and the rest of the charts have 1. There is also an option to use a randomly generated version which is generated when the application starts. If the random version is selected, the generate button is enabled. The random version is generated with no restrictions and should be used with caution.
 
 The user can also choose which chart size, \textit{Large}, \textit{Medium} or \textit{Small}, to use. The large chart is the same chart as the \textit{upper} and \textit{lower ETDRS} charts (fig. \ref{fig:etdrs_large}), the medium chart is the same as the \textit{one line chart} (fig. \ref{fig:icons_medium}) and the small chart is the same as the \textit{single optotype chart} (fig. \ref{fig:tumbling_e_small}). To navigate between the upper and lower chart, the user must swipe the screen up or down and to page between the optotypes on the small chart, the user must swipe left or right.
 
