Fixed  som on result

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -627,7 +627,7 @@ Once the application has connected to a server, the user can navigate to the cha
 
 The user can now choose which chart version, size and distance to use. The chart version decides which optotype to use at which position. The ETDRS chart has 3 pre-made versions\cite{Ferris} and the rest of the charts have 1. There is also an option to use a randomly generated version which is generated when the application starts. If the random version is selected, the generate button is enabled. The random version is generated with no restrictions and should be used with caution.
 
-The user can also choose which chart size, \textit{Large}, \textit{Medium} or \textit{Small}, to use. The large chart is the same chart as the \textit{upper} and \textit{lower ETDRS} charts (fig. \ref{fig:etdrs_large}), the medium chart is the same as the \textit{one line chart} (fig. \ref{fig:icons_medium}) and the small chart is the same as the \textit{single optotype chart} (fig. \ref{fig:tumbling_e_small}). To navigate between the upper and lower chart, the user must swipe the screen up or down and to page between the optotypes on the small chart, the user must swipe left or right.
+The user can also choose which chart size, \textit{Large}, \textit{Medium} or \textit{Small}, to use. The large chart is the same chart as the \textit{upper} and \textit{lower ETDRS} charts (fig. \ref{fig:etdrs_large}), the medium chart is the same as the \textit{one line chart} (fig. \ref{fig:icons_medium}) and the small chart is the same as the \textit{single optotype chart} (fig. \ref{fig:tumbling_e_small}). The reason the names in application differs from the names in the report is the result of an early design choice which will most likely change in the future. To navigate between the upper and lower chart, the user must swipe the screen up or down and to page between the optotypes on the small chart, the user must swipe left or right.
 
 \begin{figure}[ht!]
 \centering
